// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component snapshot Test renders a button with the correct icon side "left" 1`] = `
<button
  className="py-1.5 border-2 hover:bg-button-primary-bg-hover bg-button-primary-bg-base transition rounded-md px-7 min-w-btn ring-offset-2 focus:ring-2 focus:ring-button-primary-outline-focus border-transparent text-button-primary-text "
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-minus mr-2"
    data-icon="minus"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={{}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"
      fill="currentColor"
      style={{}}
    />
  </svg>
  Button
</button>
`;

exports[`Button component snapshot Test renders a button with the correct icon side "right" 1`] = `
<button
  className="py-1.5 border-2 hover:bg-button-primary-bg-hover bg-button-primary-bg-base transition rounded-md px-7 min-w-btn ring-offset-2 focus:ring-2 focus:ring-button-primary-outline-focus border-transparent text-button-primary-text "
  type="button"
>
  Button
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-plus ml-2"
    data-icon="plus"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={{}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
      fill="currentColor"
      style={{}}
    />
  </svg>
</button>
`;
